🎉 Major UI Enhancement: Gluestack UI Integration & Component Upgrades
✨ Frontend Improvements:
- Enhanced MoodSelector with professional styling and animations
- Upgraded NoteInput with better labels and focus states
- Improved SubmitButton with shadows and loading animations
- Added custom purple/neon theme throughout app
- Fixed all dependency conflicts and errors

☕ Backend Enhancements:
- Added 2 new moods: 'Anxious' 😰 and 'Grateful' 🙏
- Improved Brewce AI responses with better prompts
- Enhanced API error handling and response formatting

🔧 Technical Updates:
- Installed Gluestack UI dependencies (simplified approach)
- Updated Django settings for better CORS handling
- Enhanced component styling with professional shadows and animations
- Improved user experience with better loading states

🎨 Design Updates:
- Professional component styling with consistent theme
- Enhanced visual hierarchy and typography
- Better spacing and layout throughout app
- Maintained dark mode aesthetic with purple accents

Status: App now has professional UI components with enhanced functionality

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,6 @@ Django==4.2.23
 djangorestframework==3.16.0
 sqlparse==0.5.3
 typing_extensions==4.14.1
+openai==1.98.0
+python-dotenv==1.0.0
+django-cors-headers==4.3.1
