--- a/bean-there-frontend/package.json
+++ b/bean-there-frontend/package.json
@@ -9,22 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@gluestack-style/react": "^1.0.57",
-    "@gluestack-ui/config": "^1.1.20",
-    "@gluestack-ui/themed": "^1.1.73",
     "@react-navigation/native": "^7.1.16",
     "@react-navigation/native-stack": "^7.3.23",
     "expo": "~53.0.20",
     "expo-status-bar": "~2.2.3",
-    "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-native": "0.79.5",
-    "react-native-safe-area-context": "^5.4.0",
+    "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "~4.11.1",
-    "react-native-svg": "^15.12.0"
+    "react-native-svg": "^15.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "typescript": "~5.8.3",
+    "@types/react": "~19.0.10"
   },
   "private": true
 }
